--- a/main_app/templates/posts/detail.html
+++ b/main_app/templates/posts/detail.html
@@ -17,46 +17,44 @@
       <p>Email: <a href="mailto:{{ post.owner.user.email }}">{{ post.owner.user.email }}</a></p>
     </div>
   {% if user.owner.id %}
-  <div class="card-action">
-    <a href="{% url 'posts_update' post.id %}">Edit</a>
-    <a href="{% url 'posts_delete' post.id %}">Delete</a>
-  </div>
+    <div class="card-action">
+      <a href="{% url 'posts_update' post.id %}">Edit</a>
+      <a href="{% url 'posts_delete' post.id %}">Delete</a>
+    </div>
   {% endif %}
 
   <hr>
  
   <div class="card-action">   
-    <h4>Available Sitters:</h4>
-    <!-- Leaving the action empty makes the form post to the same url used to display it -->
-    <form action="{% url 'show_interest' post.id %}" method="post">
-    <!-- Django requires the following for security purposes -->
-      {% csrf_token %}
-
-      {{ show_interest_form.as_p }}
-      
-      <input type="submit" value="Submit" class="btn">
-    
-    </form>
-    <br> 
-    <table class="striped">
-      <thead>
-        <tr><th>Sitter Name</th><th>Available</th></tr>
-      </thead>
-      <tbody>
-        {% for interest in post.showinterest_set.all %}
-          {% if interest.is_interested == 'Y' %}
-            <tr>
-              <td><a href="{% url 'sitters_detail' interest.sitter.id %}">{{interest.sitter.first_name}}</td></a>
-              <td>{{interest.get_is_interested_display}}</td>
-            </tr>
-          {% endif %}
-        {% endfor %}
-      </tbody>
-    </table> 
+    <h4>Available Sitters</h4>
+        {% if user.sitter.id %}
+          <form action="{% url 'show_interest' post.id %}" method="post">
+            {% csrf_token %}
+            {{ show_interest_form.as_p }}      
+            <input type="submit" value="Submit" class="btn">   
+          </form>
+        {% endif %}
+        <br> 
+        <table class="striped">
+          <thead>
+            <tr><th>Sitter Name</th><th>Available</th></tr>
+          </thead>
+          <tbody>
+            {% for interest in post.showinterest_set.all %}
+              {% if interest.is_interested == 'Y' %}
+                <tr>
+                  <td><a href="{% url 'sitters_detail' interest.sitter.id %}">
+                    {{interest.sitter.first_name}} {{interest.sitter.last_name}}
+                  </td></a>
+                  <td>{{interest.get_is_interested_display}}</td>
+                </tr>
+              {% endif %}
+            {% endfor %}
+          </tbody>
+        </table> 
   </div>
 </main>
 <script>
-  // initialize the interest select
   var selectEl = document.getElementById('id_is_interested');
   M.FormSelect.init(selectEl);
 </script>
